BlackJack logic con't need to finish the logic for blackjack built the outline for it though